@@ -1,0 +1,8 @@
+#ifndef MPU_POWERFREE_H
+#define MPU_POWERFREE_H
+
+extern int is_powerfree(UV n, uint32_t k);
+extern UV powerfree_count(UV n, uint32_t k);
+extern UV powerfree_sum(UV n, uint32_t k);
+
+#endif
