@@ -56,18 +56,17 @@ sub mpu_public_regex {
       is_aks_prime is_bpsw_prime is_ramanujan_prime is_mersenne_prime
       is_delicate_prime
       is_power is_prime_power is_pillai is_square is_polygonal
-      is_semiprime is_almost_prime
+      is_semiprime is_almost_prime is_omega_prime
       is_square_free is_primitive_root is_carmichael is_quasi_carmichael
-      is_fundamental is_totient is_gaussian_prime
-      is_smooth is_rough is_powerful is_practical
-      sqrtint rootint logint lshiftint rshiftint rashiftint
+      is_fundamental is_totient is_gaussian_prime is_sum_of_squares
       is_smooth is_rough is_powerful is_practical
       sqrtint rootint logint lshiftint rshiftint rashiftint absint negint
-      powint mulint addint subint divint modint divrem fdivrem tdivrem
+      signint cmpint addint subint add1int sub1int mulint powint
+      divint modint divrem fdivrem tdivrem
       miller_rabin_random
       lucas_sequence
       lucasu lucasv lucasuv lucasumod lucasvmod lucasuvmod
-      primes twin_primes semi_primes almost_primes ramanujan_primes
+      primes twin_primes semi_primes almost_primes omega_primes ramanujan_primes
       sieve_prime_cluster sieve_range
       lucky_numbers is_lucky nth_lucky
       forprimes forcomposites foroddcomposites forsemiprimes foralmostprimes
@@ -87,12 +86,14 @@ sub mpu_public_regex {
       almost_prime_count_lower almost_prime_count_upper
       nth_almost_prime nth_almost_prime_approx
       nth_almost_prime_lower nth_almost_prime_upper
+      omega_prime_count nth_omega_prime
       ramanujan_prime_count ramanujan_prime_count_approx
       ramanujan_prime_count_lower ramanujan_prime_count_upper
       nth_ramanujan_prime nth_ramanujan_prime_approx
       nth_ramanujan_prime_lower nth_ramanujan_prime_upper
       powerful_count nth_powerful
       perfect_power_count prime_power_count
+      is_powerfree powerfree_count powerfree_sum
       smooth_count rough_count
       sum_primes print_primes
       random_prime random_ndigit_prime
