@@ -58,11 +58,14 @@ Revision history for Perl module Math::Prime::Util
     - is_powerful(n[,k])              is n a k-powerful number (default k=2)
     - powerful_count(n[,k])           count of k-powerful numbers <= n
     - nth_powerful(n[,k])             the nth k-powerful number (default k=2)
+    - is_powerfree(n[,k])             is n a k-powerfree number (default k=2)
+    - powerfree_count(n[,k])          count of k-powerfree numbers <= n
+    - powerfree_sum(n[,k])            sum of k-powerfree numbers <= n
     - perfect_power_count(n)          count of perfect powers <= n
     - prime_power_count(n)            count of prime powers <= n
     - smooth_count(n,k)               count of k-smooth numbers <= n
     - rough_count(n,k)                count of k-rough numbers <= n
-    - is_sum_of_squares(n,[k])        can n be a sum of k squares (dflt k=2)
+    - is_sum_of_squares(n[,k])        can n be a sum of k squares (dflt k=2)
     - allsqrtmod(a,n)                 all square roots of a (mod n)
     - qnr(n)                          least quadratic non-residue
     - binomialmod(n,k,m)              fast binomial(n,k) mod m
